feat(project): Add Next.js web application and update development workflow
- Initialize new Next.js web application in `www/` directory
- Update Deno task configuration to support parallel development of web app and main project
- Modify ThemeService to remove direct CSS property manipulation
- Update WalletService theme accent color to use OKLCH color space
- Add configuration files for Next.js project (package.json, tsconfig, etc.)
- Integrate new web application components and sections
- Update deno.lock with new dependencies

--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,14 @@
 {
   "tasks": {
-    "dev": "vite --host",
+    "dev": "sh -c 'deno task dev:build & deno task dev:vite & deno task dev:www; wait'",
+    "dev:build": "vite build --mode development --watch",
+    "dev:vite": "vite --host",
+    "dev:www": "deno task --unstable --quiet --config=./www/deno.json www:dev",
     "build": "vite build --mode production",
     "build:dev": "vite build --mode development",
     "preview": "vite preview",
-    "lint": "deno lint src/"
+    "lint": "deno lint src/",
+    "www": "deno task --unstable --quiet --config=./www/deno.json dev"
   },
   "imports": {
     "@lifi/sdk": "npm:@lifi/sdk@3.12.14",
