Refactor Donation Widget components and enhance script loading
- Replace the Home component with a new structure that loads the widget script server-side and renders the ClientPage component.
- Introduce ClientPage component to manage widget configuration and preview.
- Update WidgetConfigurator and EmbedCodeSection to accept the widget script as a prop.
- Remove the widget-utils.ts file and implement a new loadWidgetScript function for script loading based on the environment.
- Streamline WidgetPreview to directly render the widget without dynamic script loading logic.

--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,8 @@
     "dev:build": "vite build --mode development --watch",
     "dev:vite": "vite --host",
     "dev:www": "deno task --unstable --quiet --config=./www/deno.json www:dev",
-    "build": "vite build --mode production",
+    "build": "vite build --mode production && deno task build:www",
+    "build:www": "deno task --unstable --quiet --config=./www/deno.json build",
     "build:dev": "vite build --mode development",
     "preview": "vite preview",
     "lint": "deno lint src/",
