Update dependencies and enhance GitHub Actions workflow
- Remove outdated create-next-app dependency from deno.lock.
- Update @coinbase/cdp-sdk and esbuild versions in deno.lock for improved compatibility.
- Add steps to install project dependencies in the GitHub Actions workflow for seamless deployment.
- Introduce a new deno.lock file for the www directory, including essential dependencies for the project.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,12 @@ jobs:
         uses: denoland/setup-deno@v2.0.3
         with:
           deno-version: v2.5.4
+      
+      - name: Install dependencies
+        run: deno install
+      
+      - name: Install www dependencies
+        run: cd www && deno install
 
       - name: Build project
         env:
