--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy
 
 on:
   push:
@@ -34,24 +34,4 @@ jobs:
         run: cd www && deno install
 
       - name: Build project
-        env:
-          VITE_PROJECT_ID: ${{ secrets.PROJECT_ID }}
-          VITE_LIFI_API_KEY: ${{ secrets.LIFI_API_KEY }}
         run: deno task build
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4.0.0
-        with:
-          path: ./www/out
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4.0.5
-
