Update deno.json scripts and refactor layout and widget components
- Add new deployment and installation tasks in deno.json for improved project management.
- Comment out unused font variable assignments in layout.tsx for clarity.
- Refactor WidgetConfigurator to reposition the RecipientSection for better layout.
- Simplify the donation address prompt in RecipientSection for better user experience.

--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,9 @@
     "build:dev": "vite build --mode development",
     "preview": "vite preview",
     "lint": "deno lint src/",
-    "www": "deno task --unstable --quiet --config=./www/deno.json dev"
+    "www": "deno task --unstable --quiet --config=./www/deno.json dev",
+    "deploy": "deno install && deno task www:install && deno task build",
+    "www:install": "cd www && deno install"
   },
   "imports": {
     "@1inch/cross-chain-sdk": "npm:@1inch/cross-chain-sdk@1.0.0",
