--- a/deno.json
+++ b/deno.json
@@ -14,12 +14,15 @@
     "www:install": "cd www && deno install"
   },
   "imports": {
+    "@1inch/byte-utils": "npm:@1inch/byte-utils@3.1.7",
     "@1inch/cross-chain-sdk": "npm:@1inch/cross-chain-sdk@1.1.1",
+    "@1inch/fusion-sdk": "npm:@1inch/fusion-sdk@2.4.3",
     "@lifi/sdk": "npm:@lifi/sdk@3.13.2",
     "@reown/appkit": "npm:@reown/appkit@1.8.13",
     "@reown/appkit-adapter-ethers": "npm:@reown/appkit-adapter-ethers@1.8.13",
     "@std/testing": "jsr:@std/testing@1.0.16",
     "@std/assert": "jsr:@std/assert@1.0.15",
+    "assert": "npm:assert@2.1.0",
     "autoprefixer": "npm:autoprefixer@10.4.21",
     "ethers": "npm:ethers@6.15.0",
     "lit": "npm:lit@3.3.1",
