Enhance widget versioning and release process
- Introduce a new Vite plugin for versioning that integrates post-build processing, including integrity hash calculation and versioned file creation.
- Update deno.json to include new build tasks for versioning and release notes updates.
- Implement scripts for fetching releases, generating manifests, and updating release notes in GitHub.
- Add comprehensive tests for new functionality, ensuring reliability in version management and integrity checks.
- Refactor README and documentation to reflect changes in the build and release process, including new usage instructions for the configurator and local development setup.

--- a/deno.json
+++ b/deno.json
@@ -1,22 +1,29 @@
 {
+  "version": "0.1.0",
   "tasks": {
     "dev": "sh -c 'deno task dev:build & deno task dev:vite & deno task dev:www; wait'",
     "dev:build": "vite build --mode development --watch",
     "dev:vite": "vite --host",
     "dev:www": "deno task --unstable --quiet --config=./www/deno.json www:dev",
-    "build": "vite build --mode production && deno task build:www",
+    "build": "vite build --mode production && deno task post-build && deno task build:www",
+    "build:versioned": "vite build --mode production && deno task post-build",
+    "build:release": "deno run --allow-read --allow-write --allow-run --allow-env scripts/release/build-release.ts",
     "build:www": "deno task --unstable --quiet --config=./www/deno.json build",
+    "release:update-notes": "deno run --allow-read --allow-net --allow-env scripts/release/update-release-notes.ts",
     "build:dev": "vite build --mode development",
+    "post-build": "deno run --allow-read --allow-write --allow-env scripts/release/post-build.ts",
+    "manifest:update": "deno task post-build",
     "preview": "vite preview",
     "lint": "deno lint src/",
     "www": "deno task --unstable --quiet --config=./www/deno.json dev",
-    "deploy": "deno install && deno task www:install && deno task build",
+    "deploy": "deno run --allow-read --allow-write --allow-env --allow-net scripts/fetch/fetch-releases.ts build www/public && cd www && deno install && deno task build",
     "www:install": "cd www && deno install"
   },
   "imports": {
     "@1inch/cross-chain-sdk": "npm:@1inch/cross-chain-sdk@1.0.0",
     "@1inch/fusion-sdk": "npm:@1inch/fusion-sdk@2.0.0",
     "@lifi/sdk": "npm:@lifi/sdk@3.13.2",
+    "@octokit/rest": "npm:@octokit/rest@21.0.2",
     "@reown/appkit": "npm:@reown/appkit@1.8.12",
     "@reown/appkit-adapter-ethers": "npm:@reown/appkit-adapter-ethers@1.8.12",
     "@std/testing": "jsr:@std/testing@1.0.0",
