Update build scripts and configuration for widget deployment
- Modify .gitignore to exclude donation widget versioned files and integrity checks.
- Adjust deno.json to streamline build and deploy tasks, removing unnecessary post-build steps.
- Update www/deno.json to use deno task for development instead of npm.
- Set base URL for widget scripts to a consistent CDN domain in WidgetConfigurator and EmbedCodeSection components, enhancing reliability in script loading.

--- a/deno.json
+++ b/deno.json
@@ -16,7 +16,7 @@
     "preview": "vite preview",
     "lint": "deno lint src/",
     "www": "deno task --unstable --quiet --config=./www/deno.json dev",
-    "deploy": "deno run --allow-read --allow-write --allow-env --allow-net scripts/fetch/fetch-releases.ts build www/public && cd www && deno install && deno task build",
+    "deploy": "deno task build:versioned && cd www && deno install && deno task build",
     "www:install": "cd www && deno install"
   },
   "imports": {
