Refactor DonationWidget and WalletService for improved initialization and error handling
- Update license from MIT to GPLv3 in widget info.
- Simplify connectedCallback in DonationWidget by removing unnecessary version logging.
- Enhance WalletService to prevent reinitialization with the same project ID and improve error messages during wallet connection failures.

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.0.0-dev",
   "tasks": {
     "dev": "sh -c 'deno task dev:build & deno task dev:vite & deno task dev:www; wait'",
     "dev:build": "vite build --mode development --watch",
