--- a/www/public/versions.json.example
+++ b/www/public/versions.json.example
@@ -1,14 +1,14 @@
 {
-  "latest": "0.1.0",
+  "latest": "0.0.0-dev",
   "versions": {
-    "0.1.0": {
-      "file": "donation-widget.v0.1.0.js",
+    "0.0.0-dev": {
+      "file": "donation-widget.v0.0.0-dev.js",
       "integrity": "sha384-mock-integrity-hash-for-development",
       "size": 245760,
       "date": "2025-11-07T00:00:00.000Z",
-      "releaseUrl": "https://github.com/your-org/donato/releases/tag/v0.1.0",
+      "releaseUrl": "https://github.com/your-org/donato/releases/tag/v0.0.0-dev",
       "major": 0,
-      "minor": 1,
+      "minor": 0,
       "patch": 0
     },
     "0.0.9": {
