--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
         id: build
         env:
           GITHUB_REF_NAME: ${{ github.ref_name }}
+          WIDGET_VERSION: ${{ steps.version.outputs.version }}
         run: |
           echo "Building widget for release tag: ${GITHUB_REF_NAME}"
           deno task build:release
