Update versioning from 0.0.0-dev to 0.0.0 across project files
- Change version in deno.json, package.json, and package-lock.json to 0.0.0.
- Update README and example manifest to reflect the new versioning scheme.
- Adjust tests and manifest manager to align with the updated version format.

--- a/www/public/versions.json.example
+++ b/www/public/versions.json.example
@@ -1,12 +1,12 @@
 {
-  "latest": "0.0.0-dev",
+  "latest": "0.0.0",
   "versions": {
-    "0.0.0-dev": {
-      "file": "donation-widget.v0.0.0-dev.js",
+    "0.0.0": {
+      "file": "donation-widget.v0.0.0.js",
       "integrity": "sha384-mock-integrity-hash-for-development",
       "size": 245760,
       "date": "2025-11-07T00:00:00.000Z",
-      "releaseUrl": "https://github.com/your-org/donato/releases/tag/v0.0.0-dev",
+      "releaseUrl": "https://github.com/your-org/donato/releases/tag/v0.0.0",
       "major": 0,
       "minor": 0,
       "patch": 0
