--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0-dev",
+  "version": "0.0.0",
   "tasks": {
     "dev": "sh -c 'deno task dev:build & deno task dev:vite & deno task dev:www; wait'",
     "dev:build": "vite build --mode development --watch",
