--- a/www/package.json
+++ b/www/package.json
@@ -1,6 +1,6 @@
 {
   "name": "www",
-  "version": "0.0.0-dev",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
