--- a/deno.json
+++ b/deno.json
@@ -17,12 +17,10 @@
     "lint": "deno lint src/",
     "www": "deno task --unstable --quiet --config=./www/deno.json dev",
     "deploy": "deno task build:versioned && cd www && deno install && deno task build",
-    "www:install": "cd www && deno install"
+    "www:install": "cd www && deno install",
+    "test": "deno test --no-check -A"
   },
   "imports": {
-    "@1inch/cross-chain-sdk": "npm:@1inch/cross-chain-sdk@1.0.0",
-    "@1inch/fusion-sdk": "npm:@1inch/fusion-sdk@2.0.0",
-    "@lifi/sdk": "npm:@lifi/sdk@3.13.2",
     "@octokit/rest": "npm:@octokit/rest@21.0.2",
     "@reown/appkit": "npm:@reown/appkit@1.8.12",
     "@reown/appkit-adapter-ethers": "npm:@reown/appkit-adapter-ethers@1.8.12",
