--- a/deno.json
+++ b/deno.json
@@ -23,7 +23,8 @@
   "imports": {
     "@octokit/rest": "npm:@octokit/rest@21.0.2",
     "@reown/appkit": "npm:@reown/appkit@1.8.12",
-    "@reown/appkit-adapter-ethers": "npm:@reown/appkit-adapter-ethers@1.8.12",
+    "@reown/appkit-adapter-wagmi": "npm:@reown/appkit-adapter-wagmi@1.8.12",
+    "@wagmi/core": "npm:@wagmi/core@2.16.7",
     "@std/testing": "jsr:@std/testing@1.0.0",
     "@std/assert": "jsr:@std/assert@1.0.0",
     "autoprefixer": "npm:autoprefixer@10.4.21",
